-
Bug
-
Resolution: Done
-
P2: Important
-
5.0.0
-
None
-
Linux
Qt5
./configure -release -opensource -nomake examples -nomake test -nomake demos -openssl-linked -opengl desktop -qt-zlib -qt-libpng -qt-libjpeg -qt-xcb -no-accessibility
Application crashes when font dir could not be found:
QFontDatabase: Cannot find font directory /usr/local/Qt-5.0.0/lib/fonts - is Qt installed correctly?
<crash>
For Gerrit Dashboard: QTBUG-29192 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
93801,2 | Change a qFatal to a qWarning | 5.4 | qt/qtbase | Status: MERGED | +2 | 0 |